Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104014

tst_QPointer::threadSafety crashed in CI (QBindingStorage::reinitAfterThreadMove)

XMLWordPrintable

    • Windows
    • 2c81ba2df9 (qt/qtbase/dev) 2c81ba2df9 (qt/tqtc-qtbase/dev) 3073401ff6 (qt/qtbase/6.4) 3073401ff6 (qt/tqtc-qtbase/6.4) ea80641cbc (qt/tqtc-qtbase/6.2)

      Marked platforms as Windows, though it likely will happen on all platforms still.

      agent:2022/06/03 13:42:45 build.go:394: 20: A crash occurred in C:\Users\qt\work\qt\qtbase_standalone_tests\tests\auto\corelib\kernel\qpointer\tst_qpointer.exe.
      agent:2022/06/03 13:42:45 build.go:394: 20: Function time: 14ms Total time: 30ms
      agent:2022/06/03 13:42:45 build.go:394: 20: 
      agent:2022/06/03 13:42:45 build.go:394: 20: Exception address: 0x00007FF77E435AED
      agent:2022/06/03 13:42:45 build.go:394: 20: Exception code   : 0xc0000005
      agent:2022/06/03 13:42:45 build.go:394: 20: Nearby symbol    : QBindingStorage::reinitAfterThreadMove
      agent:2022/06/03 13:42:45 build.go:394: 20: 
      agent:2022/06/03 13:42:45 build.go:394: 20: Stack:
      agent:2022/06/03 13:42:45 build.go:394: 20: #  1: `anonymous namespace'::WindowsFaultHandler::windowsFaultHandler() - 0x00007FF77E574090
      agent:2022/06/03 13:42:45 build.go:394: 20: #  2: UnhandledExceptionFilter() - 0x00007FFA6461C160
      agent:2022/06/03 13:42:45 build.go:394: 20: #  3: memset() - 0x00007FFA66833E00
      agent:2022/06/03 13:42:45 build.go:394: 20: #  4: _C_specific_handler() - 0x00007FFA6681C6D0
      agent:2022/06/03 13:42:45 build.go:394: 20: #  5: _chkstk() - 0x00007FFA66831FB0
      agent:2022/06/03 13:42:45 build.go:394: 20: #  6: RtlRaiseException() - 0x00007FFA667E1020
      agent:2022/06/03 13:42:45 build.go:394: 20: #  7: KiUserExceptionDispatcher() - 0x00007FFA66830BD0
      agent:2022/06/03 13:42:45 build.go:394: 20: #  8: QBindingStorage::reinitAfterThreadMove() - 0x00007FF77E435AB0
      agent:2022/06/03 13:42:45 build.go:394: 20: #  9: QObjectPrivate::reinitBindingStorageAfterThreadMove() - 0x00007FF77E3D3FA0
      agent:2022/06/03 13:42:45 build.go:394: 20: # 10: QThread::exec() - 0x00007FF77E418A80
      agent:2022/06/03 13:42:45 build.go:394: 20: # 11: QThreadPrivate::start() - 0x00007FF77E419F80
      agent:2022/06/03 13:42:45 build.go:394: 20: # 12: BaseThreadInitThunk() - 0x00007FFA65FD7020
      agent:2022/06/03 13:42:45 build.go:394: 20: # 13: RtlUserThreadStart() - 0x00007FFA667E2630
      agent:2022/06/03 13:42:45 build.go:394: 20: 
      agent:2022/06/03 13:42:45 build.go:394: 20: qt-testrunner.py     INFO: Test process exited with code: 3221225477
      agent:2022/06/03 13:42:45 build.go:394: 20: qt-testrunner.py    ERROR: Failed to parse the XML log file: \Users\qt\work\testresults\tst_qpointer-1654263764685.xml
      agent:2022/06/03 13:42:45 build.go:394: 20: qt-testrunner.py    ERROR:     File Contents:
      agent:2022/06/03 13:42:45 build.go:394: 20: <?xml version="1.0" encoding="UTF-8"?>
      agent:2022/06/03 13:42:45 build.go:394: 20: <TestCase name="tst_QPointer">
      agent:2022/06/03 13:42:45 build.go:394: 20:   <Environment>
      agent:2022/06/03 13:42:45 build.go:394: 20:     <QtVersion>6.4.0</QtVersion>
      agent:2022/06/03 13:42:45 build.go:394: 20:     <QtBuild>Qt 6.4.0 (x86_64&#x002D;little_endian&#x002D;llp64 static release build; by MSVC 2019)</QtBuild>
      agent:2022/06/03 13:42:45 build.go:394: 20:     <QTestVersion>6.4.0</QTestVersion>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </Environment>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="initTestCase">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="10.1388"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="constructors">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.62393"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="destructor">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.95407"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="assignment_operators">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.0702"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="equality_operators">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.16078"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="swap">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.14848"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="isNull">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.11334"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="dereference_operators">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.05738"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="disconnect">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.03879"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="castDuringDestruction">
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Incident type="pass" file="" line="0" />
      agent:2022/06/03 13:42:45 build.go:394: 20:     <Duration msecs="0.59352"/>
      agent:2022/06/03 13:42:45 build.go:394: 20:   </TestFunction>
      agent:2022/06/03 13:42:45 build.go:394: 20:   <TestFunction name="threadSafety">
      

      https://testresults.qt.io/logs/qt/qtbase/29c6959746c7e0a1aa2227042ab522e2dd506b42/WindowsWindows_10_21H2x86_64WindowsWindows_10_21H2x86_64MSVC2019qtci-windows-10_21H2-x86_64-51-6fe8baMinimalStaticTests_Sccache/cce5b7f93a0048d6866e4aa005ac844cd8d452b2/test_1654261449/log.txt.gz

        For Gerrit Dashboard: QTBUG-104014
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            manordheim MÃ¥rten Nordheim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes