QThread: Clean up bindingStatusOrList if object gets deleted

Deal with the case that the object gets deleted between a call to
moveToThread and the start of the thread by removing the object from the
list in that case.

Fixes: QTBUG-104014
Change-Id: Ib249b6e8e8dfbc4d1332bb99a57fa9d3cff16465
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 2c81ba2df95cc07d5d147c8f3c7999c34848d274)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>