src/corelib/thread/qthread_p.h
@@ -108,6 +108,7 @@ public:
 
     // requires external synchronization:
     QBindingStatus *addObjectUnlessAlreadyStatus(QObject *object);
+    void removeObject(QObject *object);
     void setStatusAndClearList(QBindingStatus *status) noexcept;
 
 
@@ -237,6 +238,7 @@ public:
        if that one has been set in the meantime
     */
     QBindingStatus *addObjectWithPendingBindingStatusChange(QObject *obj);
+    void removeObjectWithPendingBindingStatusChange(QObject *obj);
 
     // manipulating m_statusOrPendingObjects requires mutex to be locked
     QtPrivate::BindingStatusOrList m_statusOrPendingObjects = {};
@@ -263,6 +265,7 @@ public:
 
     QBindingStatus* bindingStatus() { return m_bindingStatus; }
     QBindingStatus *addObjectWithPendingBindingStatusChange(QObject *) { return nullptr; }
+    void removeObjectWithPendingBindingStatusChange(QObject *) {}
 
     static void setCurrentThread(QThread *) { }
     static QAbstractEventDispatcher *createEventDispatcher(QThreadData *data);
